--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#play-pause {
+  width: 30px;
+}
+
 #video-controls {
   z-index: 2147483647;
 }
@@ -9,6 +13,12 @@
   position: relative;
   right: 10%;
   width:30px;
+}
+
+.time-container {
+  position: relative;
+  right:60%;
+  top: -0.4em;
 }
 
 #video-duration {
@@ -23,12 +33,12 @@
 
 #seek-bar {
   position: relative;
-  width: 50% !important;
-  left: 5%;
+  width: 55% !important;
+  left: 15%;
 }
 #full-screen {
   position: relative;
-  left: 23%;
+  left: 3.6em;
 }
 video::-webkit-media-controls-enclosure {
   display: none !important;
